@@ -208,14 +208,14 @@ class AttributeInfo:
             return '        %s = %s;\n' \
                     % (var, self.value)
         elif self.type == "string":
-            if classname == 'AnonymousData' and self.name == 'objtype':
+            if classname in ['AnonymousData', 'GenericData'] and self.name == 'objtype':
                 return ''
             if len(self.value) == 0:
                 return ''
             return '        %s = "%s";\n' \
                     % (var, self.value)
         elif self.type == "string_list_length" or self.type == "string_list":
-            if classname == 'AnonymousData' and self.name == 'parents':
+            if classname in ['AnonymousData', 'GenericData'] and self.name == 'parents':
                 return ''
             if len(self.value) == 0:
                 return ''
